<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/fullName"
         />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/phone"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:hint="@string/description"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btnLable"
        android:layout_gravity="bottom"
        android:onClick="goToConfirm"/>


</LinearLayout>